# AFP-Project

./: .gitignore  CHANGELOG.md  Code-Commit.cabal  CodeCommit.postman_collection.json  Readme.MD  docker-compose.yml  package-lock.json  package.json
.development/db/: Dockerfile  import_dummy_data.sh  scheme.sql
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
front-end/: index.html  server.sh  styles.css
front-end/src/: Api.elm  Error.elm  Main.elm  Page.elm  Route.elm  Session.elm
front-end/src/Api/: Endpoints.elm
front-end/src/Page/: CodeProblem.elm  Login.elm  NotFound.elm  PageNotFound.elm  Problem.elm
front-end/src/Utils/: Error.elm  Route.elm  Session.elm  Transcoder.elm  Types.elm
server/: Code-Commit.cabal  Dockerfile
server/app/: Database.hs  Dummy.hs  Main.hs  Security.hs  Types.hs
server/app/Api/: CodeProblem.hs
server/app/Security/: API.hs  App.hs  Auth.hs  Claims.hs  Handlers.hs  User.hs
server/app/System/: Checks.hs  Processing.hs
server/lib/: Database.hs  Dummy.hs  Types.hs
server/lib/Api/: CodeProblem.hs
server/lib/Database/: Config.hs  Repository.hs
server/lib/Security/: API.hs  App.hs  Auth.hs  Claims.hs  Handlers.hs  User.hs
server/lib/System/: Checks.hs  Processing.hs
server/lib/Types/: Attempt.hs  CodingProblem.hs  Score.hs  User.hs
server/test/: Main.hs
