cabal-version:      3.0
name:               Code-Commit

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:
-- description:

-- URL for the project homepage or repository.
homepage:

-- A URL where users can report bugs.
-- bug-reports:

-- license:            GPL-3.0-only
-- license-file:       ../LICENSE

-- The package author(s).
author:             jona leeflang <jona.beer@gmail.com>, Mark Gasse <m.gasse@students.uu.nl>
maintainer:         jona.beer@gmail.com
category:           Web

-- Extra files to be distributed with the package, such as examples or a README.
-- extra-source-files: ../README.md ../CHANGELOG.md

common warnings
  ghc-options: -Wall

executable Code-Commit
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Api.CodeProblem
                  ,   Types
                  ,   Security
    -- exposed-modules: 
    -- other-extensions:
    build-depends:  base            >=4.17.2.1
                ,   containers
                ,   lens
                ,   time
                ,   bytestring
                ,   text
                ,   warp
                ,   aeson 
                ,   aeson-pretty         
                ,   servant         ^>= 0.20
                ,   servant-server  ^>= 0.20
                ,   servant-auth
                ,   servant-auth-server
                ,   wai
                -- ,   servant-swagger
                -- ,   servant-checked-exceptions
                -- ,   swagger2


test-suite test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    -- other-modules:      
    build-depends:      base ^>=4.17.2.1
                    -- ,   tasty 
                    -- ,   tasty-quickcheck
                    -- ,   tasty-hunit
                    -- ,   smoothperms
